Fixed Presentation card + background position on mobiles

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -16,3 +16,10 @@ code {
 #presentationCard a {
   color: white
 }
+
+@media only screen and (max-width: 1000px) {
+  #homepageBg {
+    max-width:100%;
+    max-height:100%;
+  }
+}
